--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">lesson11</string>
+    <string name="single_choice_button_text">single choice</string>
+    <string name="multi_choice_button_text">multi choice</string>
+    <string name="bottom_alert_button_text">bottom alert</string>
+    <string name="radio_button_good_text">интересный курс</string>
+    <string name="radio_button_bad_text">не интересный курс</string>
+    <string name="radio_button_very_good_text">очень интересный курс</string>
 </resources>
